# CS5330_Spring2024

./: .gitignore  README.md
Project 1/: CMakeLists.txt  Project 1 Report - Samuel Lee.docx  README.txt  filter.cpp  filter.h  imgDisplay.cpp  timeBlur.cpp  vidDisplay.cpp
Project 1/Examples/: Gaussian.cpp  Gaussian.h  Tutorial1.cpp  Tutorial2.cpp  fourier.cpp
Project 1/faceDetect/: faceDetect.cpp  faceDetect.h
Project 2/: CMakeLists.txt  README.txt  main.cpp  test.cpp
Project 2/compute_feature/: compute_feature.cpp  compute_feature.h
Project 2/csv_util/: csv_util.cpp
Project 2/faceDetect/: faceDetect.h
Project 2/features/: feature7x7.csv  featureColorTextureHist.csv  featureFace.csv  featureHist.csv  featureMultiHist.csv
Project 2/image_match/: image_match.cpp  image_match.h
Project 3/: CMakeLists.txt  FeatureData.h  Project 3 Report - Samuel Lee and Anjith Prakash Chathan Kandy.docx  README.md  README.txt  cleanup.cpp  cleanup.h  computeFeatures.cpp  computeFeatures.h  csvReadWrite.cpp  csvReadWrite.h  distance.cpp  distance.h  main.cpp  segment.cpp  segment.h  threshold.cpp  threshold.h
Project 4/: CMakeLists.txt  Project 4 Report - Samuel Lee.docx  README.txt  augmentedReality.cpp  augmentedRealityMultiple.cpp  calibrationData.yml  detectFeatures.cpp  generateAR.cpp  getCalibration.cpp  main.cpp
Project 4/calibration/: calibration.cpp  calibration.h
Project 4/detectCorners/: detectCorners.cpp  detectCorners.h
Project 5/: Extension #1 Data Table.xlsx  Project 5 Report - Samuel Lee.docx  analyze_network.py  fashion_model.py  greek_letters.py  load_tutorial.py  main.py  model_weights.pth  resnet18_transferred_learning.py  train_tutorial.py  ~$Extension #1 Data Table.xlsx  ~$oject 5 Report - Samuel Lee.docx
Sample Code/Chromaticity Histograms/: CMakeLists.txt  makeHist.cpp  makefile
Sample Code/DNN Example/: makefile
Sample Code/Fourier Transform/: makefile
Sample Code/Grassfire Transform/: gfire.cpp  makefile
Sample Code/Image Manipulation and Filtering/: gauss.cpp  gauss.h  makefile  tut1.cpp  tut2.cpp
Sample Code/K_means_clustering_export/: CMakeLists.txt  colors.cpp  makefile
